crates/scorecard/tests/trybuild/flaky_population_red_without_detail_must_fail.stderr
error[E0061]: this function takes 5 arguments but 4 arguments were supplied
  --> tests/trybuild/flaky_population_red_without_detail_must_fail.rs:14:16
   |
14 |     let _row = Row::flaky_population_red(common, 4, 0, "4 markers".to_string());
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^--------------------------------------- argument #5 of type `String` is missing
   |
note: associated function defined here
  --> src/lib.rs
   |
   |     pub fn flaky_population_red(
   |            ^^^^^^^^^^^^^^^^^^^^
help: provide the argument
   |
14 |     let _row = Row::flaky_population_red(common, 4, 0, "4 markers".to_string(), /* String */);
   |                                                                               ++++++++++++++
